--- a/templates/rutinas/mis_rutinas_socio.html
+++ b/templates/rutinas/mis_rutinas_socio.html
@@ -22,7 +22,7 @@
           <th>IMC Ref.</th>
           <th>Fecha de Asignación</th>
           <th>Estado</th>
-          <th class="text-center">PDF</th>  {# 🩶 corregido text-align-center → class="text-center" #}
+          <th class="text-center">PDF</th>  
         </tr>
       </thead>
       <tbody>
