--- a/templates/rutinas/lista_rutinas.html
+++ b/templates/rutinas/lista_rutinas.html
@@ -10,9 +10,16 @@
       <img src="{% static 'img/planes.png' %}" alt="icono de pesas"> Plantillas de Rutinas
     </h3>
     <a href="{% url 'crear_rutina' %}" class="btn btn-dark text-warning fw-bold">
-      + Nueva Plantilla
+      + Nueva Rutina
     </a>
   </div>
+
+{% if messages %}
+  {% for message in messages %}
+    <span id="mensaje-rutina" data-mensaje="{{ message }}"></span>
+  {% endfor %}
+{% endif %}
+
 
   <div class="table-responsive">
     <table class="table table-striped align-middle shadow-sm">
@@ -34,9 +41,19 @@
           <td>{{ rutina.imc_min }}</td>
           <td>{{ rutina.imc_max }}</td>
           <td>{{ rutina.descripcion|truncatewords:10 }}</td>
-          <td class="text-muted">
-  <em>En desarrollo</em>
-</td>
+
+          <td>
+          <a href="{% url 'editar_rutina' rutina.id %}" 
+            class="btn btn-sm btn-outline-dark me-2" title="Editar">
+              ✏️
+          </a>
+
+          <a href="{% url 'eliminar_rutina' rutina.id %}" 
+            class="btn btn-sm btn-outline-danger eliminar-rutina" 
+            title="Eliminar">
+              🗑️
+          </a>
+      </td>
 
         </tr>
         {% empty %}
@@ -50,4 +67,9 @@
     </table>
   </div>
 </div>
+{% endblock %}
+
+{% block extra_js %}
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="{% static 'js/rutina.js' %}"></script>
 {% endblock %}
