--- a/templates/rutinas/lista_rutinas.html
+++ b/templates/rutinas/lista_rutinas.html
@@ -42,18 +42,24 @@
           <td>{{ rutina.imc_max }}</td>
           <td>{{ rutina.descripcion|truncatewords:10 }}</td>
 
-          <td>
+          <td class="text-center">
+          <div class="d-flex gap-2 justify-content-center">
+
               <a href="{% url 'editar_rutina' rutina.id %}" 
-                class="btn btn-sm btn-outline-dark me-2" title="Editar">
+                  class="btn btn-outline-dark btn-sm me-2"
+                  title="Editar">
                   ✏️
               </a>
 
               <a href="{% url 'eliminar_rutina' rutina.id %}" 
-                class="btn btn-sm btn-outline-danger eliminar-rutina" 
-                title="Eliminar">
+                  class="btn btn-outline-danger btn-sm me-2 eliminar-rutina"
+                  title="Eliminar">
                   🗑️
               </a>
-          </td>
+
+          </div>
+      </td> 
+
 
 
 
